<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.cynthia.mitareaactividades2.MainActivity">



    <android.support.design.widget.TextInputEditText
        android:id="@+id/inNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/itNombre"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/displayFecha"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint = "@string/itFechaNac"
            ></EditText>
        <Button
            android:id="@+id/pickFecha"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text = "Seleccionar"
            android:onClick = "elegirFecha"
            android:backgroundTint="@color/colorAccent"
            >
        </Button>

    </LinearLayout>



    <android.support.design.widget.TextInputEditText
        android:id="@+id/inTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/itTelefono"/>


    <android.support.design.widget.TextInputEditText
        android:id="@+id/inEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/itEmail"/>


    <android.support.design.widget.TextInputEditText
        android:id="@+id/inDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/itDescripcion"/>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/btnSiguiente"
        android:onClick="pasarMostrarDatos"
        android:backgroundTint="@color/colorAccent"/>

</LinearLayout>
